--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,60 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+# ===== Angular =====
+/frontend/dist/
+/frontend/.angular/
+/frontend/.angular/cache/
+/frontend/out-tsc/
+/frontend/coverage/
+/frontend/tmp/
+
+# Node
+/frontend/node_modules/
+/frontend/.npm/
+
+# TypeScript
+/frontend/*.tsbuildinfo
+/frontend/*.tsbuildinfo.*
+
+# Linty / cache
+/frontend/.eslintcache
+/frontend/.sass-cache/
+
+# Test nástroje
+/frontend/cypress/videos/
+/frontend/cypress/screenshots/
+/frontend/cypress/downloads/
+/frontend/playwright-report/
+/frontend/blob-report/
+/frontend/test-results/
+/frontend/.nyc_output/
+/frontend/karma-debug.log
+
+# Storybook
+/frontend/storybook-static/
+/frontend/.storybook-out/
+
+# Logy
+/frontend/npm-debug.log*
+/frontend/yarn-debug.log*
+/frontend/yarn-error.log*
+/frontend/pnpm-debug.log*
+/frontend/.pnpm-debug.log*
+
+# Env
+/frontend/.env
+/frontend/.env.*
+!/frontend/.env.example
+
+# Editor / OS drobnosti (jen ve frontend/)
+ /frontend/.vscode/
+/frontend/.DS_Store
+/frontend/Thumbs.db
+
+# Dočasné / záložní
+/frontend/*.tmp
+/frontend/*.temp
+/frontend/*.bak
+/frontend/*.pid
